Fixed icon z-index
Fixed icon z-index because it showed even on navigation when scrolled.

--- a/fbrctr/src/assets/toolkit/styles/components/_hero.scss
+++ b/fbrctr/src/assets/toolkit/styles/components/_hero.scss
@@ -35,7 +35,7 @@ $hero-color: white;
   }
   .select-icon {
     position: absolute;
-    z-index: 20;
+    z-index: 1;
     bottom: 10px;
     left: 3px;
   }
